Fix omnibox focus bug for ContentSuggestions on iPad

Bug: 742349
Change-Id: I35c8b668a9fecdcc84d9e9fbd8e7cbb4057968b9
Reviewed-on: https://chromium-review.googlesource.com/570244
Reviewed-by: Jean-François Geyelin <jif@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#486390}
Former-commit-id: dc513a158cf793759a329ac4b5d3c975c022a3dd