ios/chrome/browser/ui/content_suggestions/content_suggestions_header_synchronizer.mm
@@ -120,7 +120,7 @@ initWithCollectionController:
   }
 
   self.collectionController.scrolledToTop = YES;
-  self.shouldAnimateHeader = !IsIPadIdiom();
+  self.shouldAnimateHeader = YES;
 
   [UIView animateWithDuration:kShiftTilesUpAnimationDuration
       animations:^{
